apps/routers/talos-related-routes/test-moomboo/test-moomboo-service-endpoints.yaml
kind: Service
apiVersion: v1
metadata:
  name: test-moomboo
  namespace: traefik-staging
spec:
  ports:
    - name: k8s-http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 0
    - name: k8s-https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 0
---
kind: Endpoints
apiVersion: v1
metadata:
  name: test-moomboo
  namespace: traefik-staging
subsets:
- addresses:
  - ip: 10.17.13.244
  ports:
  - port: 80
    name: k8s-http
  - port: 443
    name: k8s-https
