apps/routers/talos-related-routes/test-moomboo/test-moomboo-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: test-moomboo
  namespace: traefik-staging
spec:
  entryPoints:
  - web
  # - websecure
  routes:
  - kind: Rule
    match: HostRegexp(`(?i)^.+\.test\.moomboo\.space$`) && PathPrefix(`/`)
    services:
    - kind: Service
      name: test-moomboo
      namespace: traefik-staging
      port: 80
      # scheme: https
  # tls:
  #   certResolver: prodresolver

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: test-moomboo
  namespace: traefik-staging
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNIRegexp(`(?i)^.+\.test\.moomboo\.space$`)
    services:
    - name: test-moomboo
      namespace: traefik-staging
      port: 443
  tls:
    passthrough: true
